--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -121,8 +121,8 @@
       <div class="card-body">
         <p class="card-text">
            <b><%= listing.title %></b> <br>
-           &#8377; <%= listing.price  %> /Night
-           <i class="tax-info">&nbsp;+18% GST</i>
+           &#8377; <%= listing.price.toLocaleString("en-IN") %> / night
+           <i class="tax-info">&nbsp; &nbsp; +18% GST</i>
         </p>
       </div>
 
