--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,7 +101,7 @@ body {
 
 /* add new page form*/
 #all {
-    background-color:wheat;
+    background-color:white;
     opacity: 2;
     margin:auto;
     padding: 15px;
@@ -125,7 +125,7 @@ body {
 }
 
 #all2 {
-    background-color:wheat;
+    background-color:white;
     opacity: 2;
     margin:auto;
     padding: 15px;
